structural: add @Nested groupings, fix stale @DisplayName values, clean up test organization
- Add @Nested inner classes with @DisplayName to CursorValidatorTest,
  RelayConnectionAdapterTest, CursorUtilTest, JsonApiCursorCodecTest,
  JsonApiPageAdapterTest, PaginationServiceTest, MovieRestControllerIT
- Fix class @DisplayName "Relay Spec Pagination Service Tests" to
  "Pagination Service Tests" (service was renamed)
- Fix misleading @DisplayName on MovieServiceIT startLetter=A test
- Fix misleading @DisplayName and method name on MovieServiceTest
  default sort test (says "null filter" but passes empty filter)
- Remove duplicate comment in PaginationServiceTest
- Add @DisplayName to ArchitectureTest class